# python-package-template

./: README.md  cookiecutter.json  cookiecutterjson
{{cookiecutter.project_name}}/: README.md  pyproject.toml  {% if cookiecutter.ci_tool == 'GitLab' %}.gitlab-ci.yml{% endif %}  {% if cookiecutter.pre_commit_hooks== 'Yes' %}.pre-commit-config.yaml{% endif %}
{{cookiecutter.project_name}}/.devcontainer/: {% if cookiecutter.container_system is not none %}devcontainer.json{% endif %}  {% if cookiecutter.container_system is not none %}postCreateCommand.sh{% endif %}
{{cookiecutter.project_name}}/.github/workflows/: {% if cookiecutter.ci_tool == 'GitHub' %}ci.yml{% endif %}
{{cookiecutter.project_name}}/scripts/: check_todos.sh  {% if cookiecutter.init_git== 'Yes' %}setupGit.sh{% endif %}
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  devcontainer.json  {% if cookiecutter.container_system is not none %}Dockerfile{% endif %}
{{cookiecutter.project_slug}}/.github/workflows/: {% if cookiecutter.ci_tool == 'GitHub' %}ci.yml{% endif %}
