# ======================================================================================
# Project Metadata
# ======================================================================================
[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
requires-python = ">={{ cookiecutter.python_version }}"
# Add your runtime dependencies here, for example:
# dependencies = [
#     "requests>=2.30"
# ]

# ======================================================================================
# Script Entrypoints (for command-line tools)
# (deactivated atm. as only used for packages)
# ======================================================================================
# [project.scripts]
# This creates a command-line script. For example, if project_slug is "gp_mutations",
# running `gp_mutations` in the terminal will execute the `main` function in `__main__.py`.
# {{ cookiecutter.project_slug }}" = "{{ cookiecutter.project_slug }}.__main__:main"

# ======================================================================================
# Build System
# ======================================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ======================================================================================
# Dependency Groups
# ======================================================================================
[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "ty>=0.0.1a29",
    "pytest>=7.0",
    {% if cookiecutter.pre_commit_hooks == "Yes" %}
    "pre-commit>=3.5.0",
    {% endif %}
]

# ======================================================================================
# Ruff Linter and Formatter Configuration
# ======================================================================================
[tool.ruff]
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"
line-length = 100
include = ["**/*.py"]

[tool.ruff.lint]
# E/F/W (pycodestyle/pyflakes), B (flake8-bugbear), I (isort), UP (pyupgrade),
# PT (pytest), PL (pylint subset), RUF (Ruff-specific)
select = ["E", "F", "W", "B", "I", "UP", "PT", "PL", "RUF", "ANN"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # allow re-export patterns

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 100

# ======================================================================================
# Ty Static Type Checker Configuration (Minimal and fast)
# ======================================================================================
[tool.ty]

[tool.ty.rules]
invalid-return-type = "error"
unused-ignore-comment = "error"
redundant-cast = "warn"
possibly-missing-attribute = "error"
possibly-missing-import = "error"
invalid-argument-type = "error"
unknown-argument = "error"

# ======================================================================================
# Pytest Configuration
# ======================================================================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
# A more standard test path for a single-package project
testpaths = ["tests"]